<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sohage.example.com.numberverify.Activites.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/inputLayoutMargin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_layout"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/InputLayoutPadding"
                    android:weightSum="6"
                    android:baselineAligned="false">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        app:counterEnabled="true"
                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/CountryPrefixET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/PrefixCode"
                            android:inputType="text"
                            android:padding="@dimen/InputPadding"
                            />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        app:counterEnabled="true"

                        >

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/PhoneNumberET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/PhoneNumber"
                            android:inputType="number"
                            android:padding="@dimen/InputPadding"
                            />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/VerifyButton"
                    android:layout_width="@dimen/butWidth"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/inputLayoutMargin"
                    android:background="@drawable/verify_but"
                    android:onClick="submit"
                    android:padding="@dimen/InputLayoutPadding"
                    android:text="@string/Verify"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"/>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/Result_RV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/inputLayoutMargin"
                android:layout_marginTop="@dimen/inputLayoutMargin">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/HistoryFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="@dimen/inputLayoutMargin"
        android:onClick="HistoryActivity"
        app:srcCompat="@drawable/ic_history_black_24dp"/>

</android.support.design.widget.CoordinatorLayout>
